# calculadoraPonto

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  users.db
src/: Dockerfile  backend.py  calculate_page.py  dba.py  frontend.py  login_page.py  main.py  register_page.py
